@startuml

title ___4_NEEDFORSPEED's Class Diagram__\n

  namespace _4_NeedForSpeed {
    class _4_NeedForSpeed.Car {
        + Car()
    }
  }
  

  namespace _4_NeedForSpeed {
    class _4_NeedForSpeed.CrossMotorcycle {
        + CrossMotorcycle()
    }
  }
  

  namespace _4_NeedForSpeed {
    class _4_NeedForSpeed.FamilyCar {
        + FamilyCar()
    }
  }
  

  namespace _4_NeedForSpeed {
    class _4_NeedForSpeed.Main {
    }
  }
  

  namespace _4_NeedForSpeed {
    class _4_NeedForSpeed.Motorcycle {
        + Motorcycle()
    }
  }
  

  namespace _4_NeedForSpeed {
    class _4_NeedForSpeed.RaceMotorcycle {
        + RaceMotorcycle()
    }
  }
  

  namespace _4_NeedForSpeed {
    class _4_NeedForSpeed.SportCar {
        + SportCar()
    }
  }
  

  namespace _4_NeedForSpeed {
    class _4_NeedForSpeed.Vehicle {
        {static} ~ DEFAULT_FUEL_CONSUMPTION : double
        - fuel : double
        - fuelConsumption : double
        - horsePower : int
        + Vehicle()
        + drive()
        {static} + getDefaultFuelConsumption()
        + getFuel()
        + getFuelConsumption()
        + getHorsePower()
        + setFuel()
        + setFuelConsumption()
        + setHorsePower()
    }
  }
  

  _4_NeedForSpeed.Car -up-|> _4_NeedForSpeed.Vehicle
  _4_NeedForSpeed.CrossMotorcycle -up-|> _4_NeedForSpeed.Motorcycle
  _4_NeedForSpeed.FamilyCar -up-|> _4_NeedForSpeed.Car
  _4_NeedForSpeed.Motorcycle -up-|> _4_NeedForSpeed.Vehicle
  _4_NeedForSpeed.RaceMotorcycle -up-|> _4_NeedForSpeed.Motorcycle
  _4_NeedForSpeed.SportCar -up-|> _4_NeedForSpeed.Car


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
